--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ProviderModuleDemo</string>
+    <string name="app_name">Provider 组件 Demo</string>
 </resources>
