[commit] 剔除 BaseBean！

--- a/provider_core/src/main/res/values/strings.xml
+++ b/provider_core/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">ProviderModule</string>
+    <string name="app_name">ProviderComponent</string>
 
 </resources>
