--- a/Sample_WB/src/main/res/values/strings.xml
+++ b/Sample_WB/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Zebra 组件 Demo</string>
+    <string name="app_name">微博热搜</string>
     <string name="title_activity_main">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
