--- a/Sample_WB/src/main/res/values/strings.xml
+++ b/Sample_WB/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">热搜</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="splash_text">欢迎使用%s</string>
+    <string name="splash_text">只给你想要的热搜</string>
 
 </resources>
