--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Zebra 组件 Demo</string>
+    <string name="app_name">热搜</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="splash_text">只给你想要的热搜</string>
+
 </resources>
