--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">热搜</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="splash_text">只给你想要的热搜</string>
-
     <string name="update_time">更新时间：%s</string>
-
+    <string name="hot_search_wb">微博热搜榜</string>
+    <string name="hot_search_douyin">抖音热搜榜</string>
 </resources>
