--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="update_time">更新时间：%s</string>
     <string name="hot_search_wb">微博热搜榜</string>
     <string name="hot_search_douyin">抖音热搜榜</string>
+    <string name="hot_search_zhihu">知乎热搜榜</string>
 </resources>
