--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="hot_search_douyin">抖音热搜榜</string>
     <string name="hot_search_zhihu">知乎热搜榜</string>
     <string name="filter_msg">请耐心等待, 正在为您屏蔽无用信息...</string>
+    <string name="loading">正在加载...</string>
+    <string name="load_finish">加载完成</string>
 
 </resources>
