--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="filter_msg">请耐心等待, 正在为您屏蔽无用信息...</string>
     <string name="loading">正在加载...</string>
     <string name="load_finish">加载完成</string>
+    <string name="cancel">取消</string>
 
 </resources>
